--- a/STCA_App/Pages/Shared/_Layout.cshtml
+++ b/STCA_App/Pages/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/TiposAreasAcceso">Tipos de Areas de Acceso</a>
+                        </li>
                     </ul>
                 </div>
             </div>
